# 05-chat

./: .env  Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.hurl
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem  encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  test.rest
chat_server/fixtures/: test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yml
chat_test/tests/: chat.rs
migrations/: 20240726092616_initial.sql  20240814061043_workspace.sql  20240829070009_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  notif.rs  sse.rs
