[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
axum-extra = { workspace = true }
